2007-11-27  David Smith  <dsmith@redhat.com>

PR 5377.
	* elaborate.cxx (match_node::find_and_build): Handle wildcards in
	probe points correctly.